<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BENEFIT LOOKUP</string>
    <string name="menu_settings">Settings</string>
    <string name="dummy_content">content</string>
    <string name="dummy_name">doctors name</string>
    <string name="dummy_specialities">specialities</string>
    <string name="dummy_cost">100</string>
    <string name="dummy_distance">1 mile</string>
    <string name="dummy_address">Water Street 123</string>
    <string name="dummy_phone">12345607</string>
    <string name="dummy_lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eget nisi lectus, nec lacinia dui. Etiam bibendum mi eget mauris faucibus eget consectetur nunc mollis. Curabitur viverra arcu ac risus aliquam lacinia. In sapien ligula, posuere non imperdiet in, aliquet eu diam. Morbi tincidunt ante in tellus sagittis non pulvinar mi vulputate. </string>
    <string name="dummy_lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eget nisi lectus, nec lacinia dui. </string>
    
    <string name="title_activity_services">ServicesActivity</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_activity_tabbed_list_map">TabbedListMapActivity</string>
    <string name="title_activity_tabs_fragment">TabsFragmentActivity</string>
    <string name="title_activity_doctors_info">DoctorsInfoActivity</string>
    <string name="title_activity_doctors">DoctorsActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_flipper">FlipperActivity</string>
    
    <string name="home">Home</string>
    <string name="category_label">Select Category</string>
    <string name="subcategory_image">Subcategory Image</string>
    <string name="doc_image">Doctors image</string>
    <string name="doc_cost">Cost:</string>
    <string name="doc_distance">Distance:</string>
    <string name="map">MAP</string>
    <string name="doctors">DOCTORS</string>
    <string name="my_health_online">My Health Online</string>
    <string name="specialities">Specialities</string>
    <string name="affiliations">Affiliations</string>
    <string name="hospital_affiliations">Hospital Affiliations</string>
    <string name="education">Education/Training</string>
    <string name="professional_interests">Professional Interests</string>
    <string name="additional_languages">Additional Languages Spoken</string>
    <string name="philosophy_care">Philosophy of Care</string>
    <string name="community_activities">Community Activities</string>
    <string name="directions">Directions</string>
    <string name="call">Call</string>
    <string name="empty" />
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="instructions">DRIVING INSTRUCTIONS</string>
    <string name="details">Details</string>
    <string name="search_hint">Search Services</string>
    <string name="serchable_description">suggests urls</string>
    <string name="no_search_results">NO RESULT FOUND</string>
    <string name="preferred_provider">Preferred Provider</string>
    <string name="non_preferred_provider">Non-Preferred Provider</string>
    <string name="additional_information">Additional Information</string>
    <string name="change_address">Change Address</string>
    <string name="choose_cost">Choose Cost</string>
    <string name="choose_distance">Choose Distance</string>
    <string name="filter">filter</string>
    <string name="list">list</string>
    <string name="cost_sort">Sort by cost</string>
    <string name="distance_sort">Sort by distance</string>
    <string name="clear">Clear</string>
    

</resources>