<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:padding="2dp" >

     <TextView
         android:id="@+id/titleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/home"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/searchButton"
         android:layout_toRightOf="@+id/home"
         android:ellipsize="marquee"
         android:gravity="center"
         android:marqueeRepeatLimit="marquee_forever"
         android:padding="5dp"
         android:scrollHorizontally="true"
         android:singleLine="true"
         android:text="@string/category_label"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/white" />

     <ImageButton
         android:id="@+id/searchButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentRight="true"
         android:background="@color/base_color_blue"
         android:scaleType="center"
         android:src="@android:drawable/ic_menu_search"
         android:contentDescription="@string/search_hint"
          />

     <ImageButton
         android:id="@+id/home"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/ic_launcher"
         android:contentDescription="@string/home" />

</RelativeLayout>