<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/instrScroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_doctor_info_back"
        android:gravity="center_vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/instrTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/closeButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/closeButton"
            android:background="@color/base_color_green"
            android:gravity="center"
            android:text="@string/instructions"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="2dp"
            android:background="@color/base_color_green"
            android:contentDescription="@string/close"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

        <TextView
            android:id="@+id/instrText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/instrTitle"
            android:padding="2dp"
            android:text="@string/empty"
            android:textColor="@color/base_color_blue" />
    </RelativeLayout>

</ScrollView>